# gymnasiearbete

./: .env  .gitignore  .travis.yml  Cargo.toml  README.md  api_docs.md  docker-compose.yml
.github/workflows/: rust-clippy.yml  rust.yml
game-logic/: Cargo.toml
game-logic/src/: lib.rs
game_code/: Cargo.toml
rust-backend/: Cargo.toml
rust-backend/game-logic/: Cargo.toml
rust-backend/game-logic/src/: lib.rs
rust-backend/jail/: Cargo.toml  Dockerfile
rust-backend/jail/src/: main.rs
rust-backend/sandbox/src/: main.rs
rust-backend/server/: Cargo.toml
rust-backend/src/: main.rs
rust-backend/warden/: Cargo.toml
rust-backend/warden/src/: main.rs
rust_backend/: .gitignore  Cargo.toml  TODO.md  docker-compose.yml
rust_backend/code_runner/: Cargo.toml  Dockerfile  apparmor-profile  docker-compose.yml
rust_backend/code_runner/files/: hello_world.c  program
rust_backend/code_runner/src/: main.rs
rust_backend/demo_code/: example_program.c  ping_pong.c  pong.c
rust_backend/docker/: Dockerfile
rust_backend/migrations/: 1_create_files_table.sql
rust_backend/migrations/2023-11-17-113721_users/: up.sql
rust_backend/migrations/2023-11-17-113726_files/: down.sql  up.sql
rust_backend/migrations/2023-11-24-123615_sessions/: down.sql  up.sql
rust_backend/migrations/2024-01-24-122201_simulations/: down.sql  up.sql
rust_backend/rust_server/: Cargo.toml  Dockerfile  TODO.md  docker-compose.yml  docs.md
rust_backend/rust_server/demo_code/: pong.c
rust_backend/rust_server/migrations/2023-11-17-113721_users/: up.sql
rust_backend/rust_server/migrations/2023-11-17-113726_files/: down.sql  up.sql
rust_backend/rust_server/migrations/2024-01-24-122201_simulations/: down.sql  up.sql
rust_backend/rust_server/src/: ctx.rs  error.rs  log.rs  main.rs  schema.rs
rust_backend/rust_server/src/api/: authentication.rs  create_account.rs  file_upload.rs  hashing.rs  log_in.rs  mod.rs  run_code.rs  server.rs  server_status.rs
rust_backend/rust_server/src/build_container/: mod.rs
rust_backend/rust_server/src/database/: connection.rs  mod.rs  models.rs  test_connection.rs
rust_backend/rust_server/src/docker/: api.rs  build_image.rs  docker_api.rs  mod.rs  profiles.rs
rust_backend/rust_server/src/simulation/: sim.rs
rust_backend/rust_server/src/tasks/: task.rs
rust_backend/rust_server/src/tests/: mod.rs  quick_dev.rs
rust_backend/rust_server/src/utils/: error.rs  files.rs  id_generator.rs  mod.rs
rust_backend/rust_server/upload/: file
rust_backend/src/: ctx.rs  data.rs  database.rs  docker.rs  error.rs  files.rs  id_generator.rs  log.rs  main.rs  models.rs  schema.rs  server.rs  task_queue.rs  tasks.rs
rust_backend/src/api/: authentication.rs  create_account.rs  file_upload.rs  get_files.rs  get_user.rs  get_user_data.rs  get_user_info.rs  hashing.rs  log_in.rs  mod.rs  root.rs  run_code.rs  server.rs  upload_file.rs
rust_backend/src/api/backend/: server_status.rs
rust_backend/src/build_container/: mod.rs
rust_backend/src/database/: connection.rs  mod.rs  models.rs  schema.rs
rust_backend/src/docker/: api.rs  build_image.rs  common.rs  docker_api.rs  mod.rs  profiles.rs
rust_backend/src/simulation/: games.rs  mod.rs  scoring.rs  sim.rs
rust_backend/src/tasks/: task.rs
rust_backend/src/tests/: mod.rs
rust_backend/src/utils/: error.rs  files.rs  id_generator.rs  mod.rs
rust_frontend/: Cargo.toml  Dockerfile  Rocket.toml
rust_frontend/.cargo/: config.toml
rust_frontend/src/: main.rs
rust_frontend/static/: style.css
rust_frontend/templates/: base.html.tera  index.html.tera  logged_out.html.tera  login.html.tera  my_submissions.html.tera  publish_program.html.tera  register.html.tera  submit_program.html.tera
rust_frontend/templates/errors/: 404.html.tera  500.html.tera
