[workspace]
resolver = "2"
members = ["rust_backend", "rust_frontend"]

[workspace.package]
version = "0.1.0"
authors = ["Nice Folks"]
description = "A short description of my package"
documentation = "https://example.com/bar"

[workspace.lints.rust]
unsafe_code = "forbid"
unused = "allow"

[workspace.lints.clippy]
enum_glob_use = "deny"
nursery = "deny"
unwrap_used = "deny"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev.build-override]
opt-level = 3

[term]
quiet = false          # whether cargo output is quiet
verbose = false        # whether cargo provides verbose output
color = 'auto'         # whether cargo colorizes output
hyperlinks = true      # whether cargo inserts links into output
progress.when = 'auto' # whether cargo shows progress bar
progress.width = 80    # width of progress bar
