[workspace]
resolver = "2"
members = ["rust_backend", "rust_frontend"]

[workspace.package]
version = "0.1.0"
authors = ["SapraZ, truecrunchyfrog"]
description = "A Code Grading Platform"
documentation = "https://github.com/truecrunchyfrog/gymnasiearbete"
edition = "2021"
repository = "https://github.com/truecrunchyfrog/gymnasiearbete"
readme = "README.md"
license = "GPL-3.0"
license-file = "LICENSE"
exclude = ["**/demo_code"]

[workspace.lints.rust]
unsafe_code = "forbid"
unused = "allow"

[workspace.lints.clippy]
enum_glob_use = "deny"
nursery = "deny"
unwrap_used = "deny"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev.build-override]
opt-level = 3
