[package]
name = "rust_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
axum = { version = "0.6.20", features = ["multipart"] }
bytes = "1.5.0"
date = "0.1.3"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.28"
futures-core = "0.3.28"
http = "0.2.9"
log = "0.4.20"
once_cell = "1.18.0"
rand = "0.8.5"
serde = "1.0.188"
sqlx = {version = "0.7.2", features = ["sqlx-postgres","runtime-tokio", "postgres"]}
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
ubyte = "0.10.4"
uuid = {version = "1.4.1", features = ["v4"]}
[target.'cfg(unix)'.dependencies]
shiplift = { version = "0.7.0", features = [
    "unix-socket",
], default-features = false }

[target.'cfg(windows)'.dependencies]
shiplift = { version = "0.7.0", default-features = false }

