[package]
name = "rust_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
axum = { version = "0.6.20", features = [ "multipart", "macros" ] }
bb8 = "0.8.1"
bytes = "1.5.0"
chrono = { version = "0.4.31", features = [ "serde" ] }
date = "0.1.3"
diesel = { version = "2.1.4", features = [
    "postgres",
    "r2d2",
    "uuid",
    "chrono",
] }
diesel-async = {version = "0.4.1",features = ["postgres", "tokio-postgres"]}
diesel-derive-enum = { version = "2.1.0", features = [ "postgres" ] }
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.28"
futures-core = "0.3.28"
http = "0.2.9"
log = "0.4.20"
once_cell = "1.18.0"
r2d2 = "0.8.10"
rand = "0.8.5"
serde = "1.0.188"
serde_json = "1.0.108"
tokio = { version = "1.32.0", features = [ "full" ] }
tokio-util = "0.7.9"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
ubyte = "0.10.4"
uuid = { version = "1.4.1", features = [ "v4", "serde" ] }
[target.'cfg(unix)'.dependencies]
shiplift = { version = "0.7.0", features = [
    "unix-socket",
], default-features = false }

[target.'cfg(windows)'.dependencies]
shiplift = { version = "0.7.0", default-features = false }
