[package]
name = "rust_frontend"
version.workspace = true
edition = "2021"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "=0.5.0"

[dependencies.rocket_dyn_templates]
version = "=0.1.0"
features = ["handlebars", "tera"]

[dependencies.rocket_sync_db_pools]
version = "=0.1.0"
features = ["diesel_postgres_pool"]
