[package]
name = "rust_frontend"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
reqwest = { version = "0.11.23", features = ["json", "cookies", "multipart"] }
rocket = { version = "0.5.0", features = ["secrets", "json"] }
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
