[package]
name = "rust_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"
unused = "allow"

[lints.clippy]
enum_glob_use = "deny"
#pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev.build-override]
opt-level = 3

[dependencies]
argon2 = "0.5.2"
async-trait = "0.1.74"
axum = { version = "0.7.2", features = ["multipart", "macros"] }
bollard = "0.15.0"
chrono = { version = "0.4.31", features = ["serde"] }
diesel = { version = "2.1.4", features = [
    "postgres",
    "r2d2",
    "uuid",
    "chrono",
] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.28"
http = "1.0.0"
hyper = "1.0.1"
lazy-regex = "3.1.0"
log = "0.4.20"
rand = "0.8.5"
regex = "1.10.2"
serde = "1.0.188"
serde_json = "1.0.108"
strum_macros = "0.25.3"
tar = "0.4.40"
tempfile = "3.9.0"
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
tower-cookies = "0.10.0"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
anyhow = "1.0.75"
tower-http = { version = "0.5.1", features = ["timeout", "trace"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
axum-test = "14.2.2"

[dev-dependencies]
httpc-test = "0.1.8"
